5.0.0 -> 5.1a1:
    - rpm-maint: fix: limit exit codes to 254 to keep xargs happy.
    - jbj: mire: add vallen argument to mireRegexec().
    - jbj: borrow pcregrep.c from pcre-7.6, rename as rpmgrep.c.
    - jbj: rpmio: use tmire.c, not -DSTANDALONE, so librpmio doesnt rebuild.
    - jbj: rpmio: add tmire to noinst_PROGRAMS.
    - jbj: rpmio: add --regex/--pcre/--fnmatch/--strcmp tmire match options
    - jbj: mire: add RPMMIRE_PCRE for the pcre(3) inclined.
    - jbj: tweak up tmire with rpmioAllPoptTable.
    - jbj: rpmio: add global __debug to use common rpmioAllPopt --debug option.
    - jbj: use poptIO with rpmio noinst_PROGRAMS.
    - jbj: rpmio: clone poptIO.[ch] from poptALL.c for rpmio noinst_PROGRAMS.
    - jbj: rpmcli: remove duplicate nolibio entry in poptALL.c
    - jbj: pemit %{___NVRA} to parameterize the displayed NVRA while installing.
    - jbj: create %___NVRA to split external <-> internal package names.
    - rpm.org: Mass convert (back) to rpmTag as it's usable everywhere now
    - rpm.org: Use rpmSigTag enum for signature tags everywhere, more or less..
    - jbj: import a modified copy of testHTML.c from libxml2.
    - rpm.org: make gendiff sort the file list, so comparing the results is easier.
    - jbj: rpmio: test programs link only -lrpmio -lrpmmisc.
    - jbj: map tdir/tglob/tfts errors into exit codes.
    - jbj: dav{Stat,LStat,Opendir) return ENOENT with malformed URI (including
	no pesky trailing /).
    - jbj: rpmdav: fix: supply davOpendir->davHEAD a statbuf to avoid tdir/tfts
	segfaults on plain http. (only . and .. in directory).
    - jbj: tweak up tglob debugging spew, add a Glob(3) stopwatch.
    - jbj: tweak up tget debugging spew, trick in a Stat(2) on path,
	add Stat(2)/Fread(3) stopwatches, display same as "ls -island" output.
    - proyvind: python: add back RPMSENSE_FIND_REQUIRES, needed by rpmlint
    - jbj: use hashFunctionString on URI path for st->st_ino/dp->d_ino values.